--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "regiotool",
+  "name": "ol3_gis_prototype",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
@@ -21,7 +21,7 @@
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
-  "moduleName": "regiotoolApp",
+  "moduleName": "ol3_gis_prototypeApp",
   "overrides": {
     "bootstrap": {
       "main": [
