--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "regiotool",
+  "name": "ol3_gis_prototype",
   "private": true,
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
